--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -6,8 +6,8 @@ on:
 
 jobs:
   build-win:
-    name: Build
-    runs-on: windows-latest
+    name: Build & Release
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
