--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -2,7 +2,7 @@ name: Build & Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   build-win:
@@ -12,18 +12,21 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.21'
+          go-version: "^1.21"
       - name: Build for Windows
         run: GOOS=windows GOARCH=amd64 go build -o ./mkbsd-win-x64.exe ./main.go
       - name: Build for Linux (x64)
         run: GOOS=linux GOARCH=amd64 go build -o ./mkbsd-linux-x64 ./main.go
+      - name: Build for MacOS (x64)
+        run: GOOS=darwin GOARCH=amd64 go build -o ./mkbsd-darwin-x64 ./main.go
+      - name: Build for MacOS (ARM)
+        run: GOOS=darwin GOARCH=amd64 go build -o ./mkbsd-darwin-arm ./main.go
       - name: Publish Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             ./mkbsd-win-x64.exe
             ./mkbsd-linux-x64
+            ./mkbsd-darwin-x64
+            ./mkbsd-darwin-arm
           token: ${{secrets.GH_PAT}}
-
-
-
